# bmad-docugen

./: .gitignore  AGENTS.md  BMAD Cheatsheet.md  README.md  pyproject.toml
agentkit/: __init__.py  cli.py  pdf_to_html.py  shared.py  visual_regression.py
agentkit_pdf_html.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: Bank_Statement_Comprehensive_Guide_Combined.md  Fields.md  Google_Places_API_Complete_Integration.md  NABProofOfBalance_Generation_Guide.md  NABProofOfBalance_design_spec.md  NABTransactionListing_design_spec.md  Payslip_Streamlined_Documentation.md  Puppeteer_PDF_Generation_Guide.md  architecture.md  brief.md  config-specification.md  front-end-spec.md  prd.md  xeroPayslip_design_spec.md
docs/architecture/: api-specification.md  backend-architecture.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  external-apis.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  operational-runbooks.md  security-and-performance.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/prd/: checklist-results-report.md  epic-1-generator-foundation-input-harmonisation.md  epic-2-compliance-grade-document-synthesis.md  epic-3-operational-delivery-observability.md  epic-4-developer-enablement-template-extensibility.md  epic-5-compliance-automation-continuous-assurance.md  epic-list.md  index.md  next-steps.md  (+5 more)
(+80 files in other folders)
