[project]
name = "agentkit-pdf-html"
version = "0.1.0"
description = "Utilities for converting PDFs into pixel-perfect HTML with visual regression testing."
authors = [
  { name = "Agentkit" }
]
requires-python = ">=3.10"
dependencies = [
  "pdfminer.six>=20221105",
  "pillow>=10.0.0",
  "playwright>=1.40.0",
]

[project.optional-dependencies]
render = [
  "pymupdf>=1.23.8",
  "pdf2image>=1.17.0",
]

[project.scripts]
agentkit = "agentkit.cli:run"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentkit", "agentkit.*"]
